# 100-Days-Of-Rust

./: .gitignore  Cargo.toml  README.md  pull_request_template.md
.github/: pull_request_template.md
Week-01/Day-00_Hello-World/: Cargo.toml
Week-01/Day-01_Convert-Ages-To-Days/conv_age_to_days/: Cargo.toml
Week-01/Day-01_Convert-Ages-To-Days/conv_age_to_days/src/: main.rs
Week-01/Day-02_Finding-Nemo/: Cargo.toml
Week-01/Day-02_Finding-Nemo/src/: main.rs
Week-01/Day-03_Barbecue-Skewers/: Cargo.toml
Week-01/Day-03_Barbecue-Skewers/src/: main.rs
Week-01/Day-04_Is-Johnny-Making-Progress/: Cargo.toml
Week-01/Day-04_Is-Johnny-Making-Progress/src/: main.rs
Week-01/Day-05_Pair-Of-Socks/: Cargo.toml
Week-01/Day-05_Pair-Of-Socks/src/: main.rs
Week-01/Day-06_Next-Prime/: Cargo.toml
Week-01/Day-06_Next-Prime/src/: main.rs
Week-01/Day-07_Merge-Sorted-Array/: Cargo.toml
Week-01/Day-07_Merge-Sorted-Array/src/: lib.rs  main.rs  merge_1.rs  merge_2.rs  merge_3.rs  merge_4.rs
Week-02/Day-08_Letter-Combinations-Of-A-Phone-Number/: Cargo.toml
Week-02/Day-08_Letter-Combinations-Of-A-Phone-Number/src/: lib.rs
Week-02/Day-09_Trapping-Rain-Water/: Cargo.toml
Week-02/Day-09_Trapping-Rain-Water/src/: common_stuff.rs  lib.rs  water_v1.rs  water_v2.rs
