[workspace]
resolver = "2"

members = [
    "Week-01/Day-00_Hello-World",
    "Week-01/Day-01_Convert-Ages-To-Days/conv_age_to_days",
    "Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days",
    "Week-01/Day-02_Finding-Nemo",
    "Week-01/Day-03_Barbecue-Skewers/",
    "Week-01/Day-04_Is-Johnny-Making-Progress",
    "Week-01/Day-05_Pair-Of-Socks",
    "Week-01/Day-06_Next-Prime",
    "Week-01/Day-07_Merge-Sorted-Array",
    # Made it to week 2 
    "Week-02/Day-08_Letter-Combinations-Of-A-Phone-Number",
]
